# lgndbdt

./: README.md  __init__.py  index.md  setup.cfg  setup.py
ML_utils/: settings.py
RawToBDT/: BDT.py
RawToBDT/ML_utils/: BDTPrep.py  Visualization.py
RawToBDT/extraction_utils/: AvsE.py  DCR.py  DriftTime.py
RawToBDT/extraction_utils/.ipynb_checkpoints/: AvsE-checkpoint.py  BaselineNoise-checkpoint.py  config-checkpoint.py
RawToBDT/rawtobdt/: BDT.py
dev_env/: FullRun.py  Outlook.txt
dev_env/utilities/: get_files.py
extraction_utils/.ipynb_checkpoints/: waveform-checkpoint.py
functions/ML_utils/: BDTTrain.py
functions/extraction_utils/: RawToTrain.py
functions/extraction_utils/.ipynb_checkpoints/: DCR-checkpoint.py
lgndbdt/: __init__.py  functions.py
lgndbdt/ML_utils/: BDTPrep.py  MultiVarCorr.py  Visualization.py
lgndbdt/Unused_Files/: Unused_Code.py  configDS.py
lgndbdt/Unused_Files/DataSpecificFiles/: ExtractionDS.py
lgndbdt/dev_env/: __init__.py
lgndbdt/dev_env/BDT_utilities/: Visualization.py  plot_legacy.py  train_functions.py
lgndbdt/dev_env/extraction_utilities/: AvsE.py  DCR.py  LQ80.py  PZ.py  TDRIFT.py  waveform.py
lgndbdt/dev_env/run_files/: BDT_test.py  BDT_train.py  BDT_train_validate.py  (+5 more)
lgndbdt/extraction_utils/: AvsE.py  BaselineNoise.py  DCR.py  DriftTime.py  Extraction.py  FullSpectrumEnergyExtraction.py  LQ.py  RawToTrain.py  calibration_to_peakdata.py  config.py  configDS.py  h5Extract.py  h5utils.py  psd_extraction.py  raw_to_calibration.py  waveform.py
lgndbdt/raw_to_bdt/: BDT.py  BDT_Vis.py  DistMatchingStudy.py  PSD_Extraction.py  get_config.py  runPSD.py  sds.py
raw_to_bdt/: PSD_Extraction.py
(+15 files in other folders)
