[metadata]
name = LEGENDPSDBDT
description = Python package for extracting PSDs and training a BDT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/henry-e-n/LEGENDPSDBDT.git 
author = Henry Nachman
maintainer = Henry Nachman
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
project_urls =
    Documentation = https://github.com/henry-e-n/LEGENDPSDBDT

[options]
packages = find:
install_requires =
    h5py>=3.2.0
    iminuit
    matplotlib
    numba!=0.53.*,!=0.54.*
    numpy>=1.21
    pandas
    parse
    pint
    pyfftw
    scipy
    tqdm
    lightgbm
python_requires = >=3.9
include_package_data = True
package_dir =
    = extraction_utils
    = ML_utils
    = rawtobdt
zip_safe = False

[options.packages.find]
where = 
    = extraction_utils
    = ML_utils
    = rawtobdt

[options.package_data]
* = *.json

[flake8]
extend-ignore = E203, E501